--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 <div class="background">
     <div class="introduction">
-            Hi, this website is Assignment 1 of SENG 513. And it shows you the top players at different positions in the NBA.
-            <br>These different positions include:<br><br>
+        Hi, this website is Assignment 1 of SENG 513. And it shows you the top players at different positions in the NBA.
+        <br>These different positions include:<br><br>
         <div class="position">
             <table border=1>
                 <tr>
@@ -38,10 +38,22 @@
                 </tr>
             </table>
         </div>
-
+        <br>When you click each button on the top bar, you can see the specific data about each position.<br>
+        <div class="me">
+            <br>For me, I am a basketball fan and I usually play basketball in our university. My position is small forward (SF).<br>
+            This is me
+            <img src="picture/img.png" alt="logo" width="25" height="25">
+            <img src="picture/img.png" alt="logo" width="25" height="25">
+            <img src="picture/img.png" alt="logo" width="25" height="25"><br>
+        </div>
+        <div class="myself">
+            <img src="picture/IMG_3666.jpg" alt="Zicheng Huang" width="500" height="700">
+            &emsp;&emsp;&emsp;&emsp;
+            <img src="picture/IMG_5287.jpg" alt="Zicheng Huang" width="500" height="700">
+        </div>
         <div class="ending">
-                <br>When you click each button on the top bar, you can see the specific data about each position.
                 <br><br>Thank you for visiting this website!!!<br><br>
+        </div>
     </div>
 </div>
 </body>
