--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
 <div class="background">
     <div class="introduction">
-        Hi, this website is Assignment 1 of SENG 513. And it shows you the top players at different positions in the NBA.
-        <br>These different positions include:<br><br>
+        <p>
+            Hi, this website is Assignment 1 of SENG 513. And it shows you the top players at different positions in the NBA.
+            <br>These different positions include:<br>
+        </p>
         <div class="position">
             <table border=1>
                 <tr>
@@ -38,21 +40,29 @@
                 </tr>
             </table>
         </div>
-        <br>When you click each button on the top bar, you can see the specific data about each position.<br>
+        <p>
+            <br>When you click each button on the top bar, you can see the specific data about each position.
+        </p>
         <div class="me">
-            <br>For me, I am a basketball fan and I usually play basketball in our university. My position is small forward (SF).<br>
-            This is me
-            <img src="picture/img.png" alt="logo" width="25" height="25">
-            <img src="picture/img.png" alt="logo" width="25" height="25">
-            <img src="picture/img.png" alt="logo" width="25" height="25"><br>
+            <p>
+                For me, I am a basketball fan and I usually play basketball in our university. My position is small forward (SF).<br>
+                This is me
+                <img src="picture/img.png" alt="logo" width="25" height="25">
+                <img src="picture/img.png" alt="logo" width="25" height="25">
+                <img src="picture/img.png" alt="logo" width="25" height="25"><br>
+            </p>
         </div>
         <div class="myself">
             <img src="picture/IMG_3666.jpg" alt="Zicheng Huang" width="500" height="700">
             &emsp;&emsp;&emsp;&emsp;
-            <img src="picture/IMG_5287.jpg" alt="Zicheng Huang" width="500" height="700">
+            <img src="picture/IMG_5287.jpg" alt="Zicheng Huang" width="500" height="700"><br><br>
+        </div>
+        <div class="more">
+            <h1>See more Information about NBA</h1>
+            <br>&emsp;&emsp; <a href="https://ca.nba.com/?gr=www" target="_blank">NBA Latest News</a>
         </div>
         <div class="ending">
-                <br><br>Thank you for visiting this website!!!<br><br>
+            <br><br>Thank you for visiting this website!!!<br><br>
         </div>
     </div>
 </div>
